compiler/lume_parse/src/snapshots/lume_parse__tests__loop_snapshots@iter_loop_break.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"for pattern in collection { break; }\")"
---
SOURCE_FILE@0..36
  FOR_STMT@0..36
    FOR_KW@0..3 "for"
    IDENT@3..10 "pattern"
    WHITESPACE@10..11 " "
    WHITESPACE@11..12 " "
    IN_KW@12..14 "in"
    VARIABLE_EXPR@14..25
      WHITESPACE@14..15 " "
      IDENT@15..25 "collection"
    WHITESPACE@25..26 " "
    BLOCK@26..36
      LEFT_BRACE@26..27 "{"
      WHITESPACE@27..28 " "
      BREAK_STMT@28..34
        BREAK_KW@28..33 "break"
        SEMICOLON@33..34 ";"
      WHITESPACE@34..35 " "
      RIGHT_BRACE@35..36 "}"
