compiler/lume_parse/src/snapshots/lume_parse__tests__loop_snapshots@iter_loop_continue.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"for pattern in collection { continue; }\")"
---
SOURCE_FILE@0..39
  FOR_STMT@0..39
    FOR_KW@0..3 "for"
    IDENT@3..10 "pattern"
    WHITESPACE@10..11 " "
    WHITESPACE@11..12 " "
    IN_KW@12..14 "in"
    VARIABLE_EXPR@14..25
      WHITESPACE@14..15 " "
      IDENT@15..25 "collection"
    WHITESPACE@25..26 " "
    BLOCK@26..39
      LEFT_BRACE@26..27 "{"
      WHITESPACE@27..28 " "
      CONTINUE_STMT@28..37
        CONTINUE_KW@28..36 "continue"
        SEMICOLON@36..37 ";"
      WHITESPACE@37..38 " "
      RIGHT_BRACE@38..39 "}"
