compiler/lume_parse/src/snapshots/lume_parse__tests__loop_snapshots@iter_loop_empty.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"for pattern in collection { }\")"
---
SOURCE_FILE@0..29
  FOR_STMT@0..29
    FOR_KW@0..3 "for"
    WHITESPACE@3..4 " "
    NAME@4..11
      IDENT@4..11 "pattern"
    WHITESPACE@11..12 " "
    IN_KW@12..14 "in"
    VARIABLE_EXPR@14..25
      WHITESPACE@14..15 " "
      NAME@15..25
        IDENT@15..25 "collection"
    WHITESPACE@25..26 " "
    BLOCK@26..29
      LEFT_BRACE@26..27 "{"
      WHITESPACE@27..28 " "
      RIGHT_BRACE@28..29 "}"
