compiler/lume_parse/src/snapshots/lume_parse__tests__loop_snapshots@pred_loop_break.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"while true { break; }\")"
---
SOURCE_FILE@0..21
  WHILE_STMT@0..21
    WHILE_KW@0..5 "while"
    WHITESPACE@5..6 " "
    LIT_EXPR@6..10
      LITERAL@6..10
        BOOLEAN_LIT@6..10 "true"
    WHITESPACE@10..11 " "
    BLOCK@11..21
      LEFT_BRACE@11..12 "{"
      WHITESPACE@12..13 " "
      BREAK_STMT@13..19
        BREAK_KW@13..18 "break"
        SEMICOLON@18..19 ";"
      WHITESPACE@19..20 " "
      RIGHT_BRACE@20..21 "}"
