compiler/lume_parse/src/snapshots/lume_parse__tests__loop_snapshots@pred_loop_empty.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"while true { }\")"
---
SOURCE_FILE@0..14
  WHILE_STMT@0..14
    WHILE_KW@0..5 "while"
    WHITESPACE@5..6 " "
    LIT_EXPR@6..10
      LITERAL@6..10
        BOOLEAN_LIT@6..10 "true"
    WHITESPACE@10..11 " "
    BLOCK@11..14
      LEFT_BRACE@11..12 "{"
      WHITESPACE@12..13 " "
      RIGHT_BRACE@13..14 "}"
