compiler/lume_parse/src/snapshots/lume_parse__tests__module@empty_module.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"\")"
---
SOURCE_FILE@0..0
