compiler/lume_parse/src/snapshots/lume_parse__tests__namespace_snapshots@only_namespace_kw.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"namespace\")"
---
SOURCE_FILE@0..9
  NAMESPACE@0..9
    NAMESPACE_KW@0..9 "namespace"

expected identifier@7..8
