compiler/lume_parse/src/snapshots/lume_parse__tests__namespace_snapshots@path_1.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"namespace std\")"
---
SOURCE_FILE@0..12
  NAMESPACE@0..12
    NAMESPACE_KW@0..9 "namespace"
    IDENT@9..12 "std"
